--- a/style.css
+++ b/style.css
@@ -90,8 +90,12 @@ body{
         
         align-items: center;
     }
+    .intro{
+        margin-bottom: 20px;
+    }
     .red{
-        padding: 3px !important;
+        padding: 0px !important;
+        margin-bottom: 50px;
     }
     .black{
         display: flex;
