--- a/style.css
+++ b/style.css
@@ -247,7 +247,9 @@ grid-row-gap: 0px;
     
   }
 
-
+.movingmsganime{
+    display: none;
+}
 @media (min-width: 425px) and (max-width: 992px)
 {
     .container {
